# bridgetalk

./: .dockerignore  .envrc  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.claude/: settings.json
.claude/agents/: changelog-writer.md
.claude/commands/: commit.md
.claude/hooks/: package-lock.json  package.json  post-tool-use-tracker.sh  post-tool-use-tracker.ts  skill-activation-prompt.ts  tsconfig.json
.claude/rules/: principles.md  quality.md  safety.md  tools.md  workflow.md
.claude/rules/backend/: python.md
.claude/rules/frontend/: react.md
.claude/skills/: README.md  skill-rules.json
.claude/skills/pkg/: SKILL.md
.claude/skills/review/: PATTERNS.md  SKILL.md
.claude/skills/search/: SKILL.md
apps/backend/: alembic.ini  config.yaml.template  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 643ecb69f264_init.py
apps/backend/src/: config.py  container.py  main.py  model_registry.py
apps/backend/src/core/: __init__.py
apps/backend/src/core/api/: response.py
apps/backend/src/core/cache/: __init__.py  redis_service.py
apps/backend/src/core/config/: __init__.py  loader.py
apps/backend/src/core/context/: __init__.py  request.py
apps/backend/src/core/database/: __init__.py  base.py  session.py  state.py
apps/backend/src/core/logging/: __init__.py  config.py  core.py  early.py
apps/backend/src/core/sse/: __init__.py  events.py
apps/backend/src/core/type/: __init__.py  common.py
apps/backend/src/domain/translate/agent/: __init__.py  tools.py  translate_agent.py
apps/backend/src/domain/translate/api/: routes.py
apps/backend/src/domain/translate/graph/: __init__.py  checkpoint.py
apps/backend/src/domain/translate/model/: translation.py
apps/backend/src/domain/translate/prompts/: dev_to_pm.py  pm_to_dev.py  system.py
apps/backend/src/domain/translate/repository/: translate_repository.py
apps/backend/src/domain/translate/schema/: request.py  response.py
apps/backend/src/domain/translate/service/: translate_service.py
apps/backend/src/llm/: dashscope.py
apps/frontend/: eslint.config.js  index.html  package.json  vite.config.ts
apps/frontend/src/: App.tsx  index.css  vite-env.d.ts
apps/frontend/src/api/: types.ts
apps/frontend/src/components/layout/: Header.tsx  MainCenter.tsx  RootLayout.tsx
apps/frontend/src/components/markdown/: MarkdownEditor.tsx  markdown.css
apps/frontend/src/components/translate/: GapsCard.tsx  PerspectiveIndicator.tsx  TranslatePanel.tsx
apps/frontend/src/config/: index.ts
apps/frontend/src/hooks/: useTranslate.ts
apps/frontend/src/pages/: ChatPage.tsx  HistoryPage.tsx  HomePage.tsx
apps/frontend/src/router/: index.tsx
docs/backend/: architecture.md  dependency-injection.md  session-signatures.md
